# libcif

./: .gitignore  .travis.yml  AUTHORS  Doxyfile  LICENSE  Makefile.am  README  README.md  autogen.sh  configure.ac  quickcheck.sh  wipeout.sh
config/m4/: fc_integer.m4  workarounds.m4
src/: Makefile.am  dummy.c  gcov_check_coverage.in  gcov_clean.in  gcov_report.in  hall_data.h  hall_data.py  matrix3.h  symop.c  symop.h  test.c  test_common.h  test_error.c  test_memory.in  uc.c  uc.h  vector3.h
